# Factory-Feature

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  app.ipynb  app.py  content.py  main.ipynb  main.py  pyproject.toml  requirements.txt  setup.py
bkp/v1/: .gitignore  README.md  app.py  files.txt
bkp/v1/data/: output.pkl
bkp/v1/notebook/: text.txt  watsonx.ipynb  watsonx_alpha.ipynb  watsonx_beta.ipynb
bkp/v1/utils/: vector.py  watsonx.py
data/: app.py
data/feature_requests/: add_authentication.txt  improve_ui.txt
docs/: API_REFERENCE.md  CONTRIBUTING.md  README.md  STRUCUTRE.md  USAGE.md
notebook/: watsonx.ipynb  watsonx_alpha.ipynb  watsonx_beta.ipynb  watsonx_gamma.ipynb
notebooks/: watsonx_delta.ipynb  watsonx_gamma.ipynb  watsonx_generator.ipynb
notebooks/backup/v1/: watsonx_gamma.ipynb
notebooks/project_old/: app.py  requirements.txt
notebooks/project_old/utils/: helpers.py
project_old/: README.md  app.py  requirements.txt
project_old/src/: app.py
project_old/utils/: helpers.py
src/analysis/: content.py  dependency_resolver.py  feature_mapper.py  project_parser.py  tree.py
src/generation/: feature_integration.py  preprocessing.py  project_generator.py  project_structure.py  task_prompts.py
src/models/: llm_inference.py  prompt_templates.py
src/models/backup/: llm_inference-v1.py  llm_inference-v2.py  llm_inference-v3.py  llm_inference-v4.py  llm_inference-v5.py
src/tests/: test_analysis.py  test_generation.py  test_vector_database.py
src/utils/: config_loader.py  file_operations.py  logger.py  tools.py
src/vector_database/: db_builder.py  db_builder_simple.py  db_load.py  db_query.py  display_content.py
src/vector_database/backup/: db_load.py
tests/: test_analysis.py  test_generation.py  test_main.py  test_vector_database.py
utils/: extractor.py
